--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,4 @@
 AUTHORS
 
-... (list here, one each line, name and email)
-...
-
-Athors shall aknowledge the following people for they valuable contributions.
+- Luiz Fernando S. E. Santos, 10892680
+- Luca XXXX, XXXXX
